# rust-personal-dashboard

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/2020-02-10-040016_initialize/: down.sql  up.sql
backend/migrations/2020-02-22-191336_AddParentToNote/: down.sql  up.sql
backend/src/: cors.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
backend/templates/: index.hbs  layout.hbs
frontend/: index.html  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/components/: create_note.js  note.js  notes_list.js  notes_tree.css  notes_tree.js  tree.js
frontend/src/components/layouts/: main_layout.css  main_layout.js
frontend/src/components/notes_tree/: index.css  index.js  radial_menu.js  tree.js
