[package]
name = "backend"
version = "0.1.0"
authors = ["Xavier Hocquet <xhocquet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["chrono", "r2d2"] }
lazy_static = "1.4.0"
rocket = "0.4.7"
rocket_contrib = { version = "0.4.2", features = ["json", "diesel_postgres_pool", "handlebars_templates"] }
serde_json = "1.0.47"
serde = "1.0.104"
serde_derive = "1.0.104"
